got the expelCard function to work and pushes expelled students to voldemortArmy array.

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
           </p>
         </div>
 
-      <div id="leftPic">
-        
-
+      <div id="container">
         <div id="form" class="d-flex justify-content-center" style="padding: 1.5em;"></div>
         
         <div id="students" class="d-flex flex-wrap"></div>
+
+        <div id="expelledStudent" class="d-flex flex-wrap"></div>
       </div>
 
     <footer></footer>
