--- a/index.html
+++ b/index.html
@@ -30,13 +30,15 @@
         
         <div id="students" class="d-flex flex-wrap"></div>
 
+        <div id="voldemort-army" class="d-flex justify-content-center"></div>
         <div id="expelledStudent" class="d-flex flex-wrap"></div>
+
       </div>
 
     <footer></footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-    <script src="./scripts/main.js" type="module"></script>
+    <script type="module" src="./scripts/main.js"></script>
   </body>
 </html>
