ordered all JS functions in the main.js file from top to bottom into cascading functionality. Also added more CSS styling and edited HTML id=tagNames.

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
         
         <div id="voldemort-army" class="d-flex justify-content-center"></div>
         
-        <div id="v-army" class="d-flex justify-content-center">Voldemort's Army</div>
+        <div id="v-army" class="d-flex justify-content-center">VOLDEMORT'S ARMY</div>
 
         <div id="expelledStudent" class="d-flex flex-wrap"></div>
       </div>
 
-    <!-- <footer></footer> -->
+    <footer></footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
