html styling and CSS.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <p style="font-weight: 600;">Click the button below to be sorted into one of our four student houses at Hogwarts!</p>
           
           <div class="lead">
-            <a id="sort" type="submit" class="btn btn-primary btn-lg" href="#" role="button">Sort Hat</a>
+            <button id="sort" type="submit" class="btn btn-primary btn-lg" value="submit">Sort Hat</button>
             <div id="form" class="d-flex justify-content-center" style="padding: 1.5em;"></div>
           </div>
           <div id="student-title" class="d-flex justify-content-center">FRESHMAN STUDENTS</div>
