--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 
     <div id="sortingHat"></div>
+    <div id = "studentForm"></div>
     <div id="hogwartsStudents"></div>
     <div id="expelledStudents"></div>
     
