--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
     <div id = "card" class = "greetingCard" ></div>
     <div id = "form" class = "form1"></div>
+    <div id = "studentHouse" class = "housestyle"></div>
+    <did id = "filterCards" class= "cardstyle"></div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <script src = "main.js" ></script>  
 </body>
