house filter buttons

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <div id = "card" class = "greetingCard" ></div>
     <div id = "form" class = "form1" ></div>
-    <div id = "name-error" class = "messagestyle"></div>
-    <div id = "studentHouse" class = "housestyle"></div>
-    <div id = "filterCards" class= "cardstyle"></div>
+    <div id = "studentHouse" class = "housestyle"  id = "studentcard"></div>
+    <div id = "filterCards" class= "cardstyle" id = "voldyarmy"></div>
+    <div id = "buttonContainer" class = "buttonstyle" id = "nonexpelledstudents"></div>
 
     
 
